--- a/recipe-app/index.html
+++ b/recipe-app/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="recipe"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
